--- a/Proj_fromagerie/Authentification/templates/base.html
+++ b/Proj_fromagerie/Authentification/templates/base.html
@@ -8,7 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
-        <h1>Fromagerie</h1>
+   <div class="container mb-5">
+      {%include 'navbar.html'%}
+      <div class="row">
+        <div class="col-7"></div>
+        <div class="col-5"><a href="" class="col-sm">Colis |</a><a href=""class="col-sm"> Stock |</a><a href=""class="col-sm"> Administration</a></div>
+      </div>
+   </div>
+  
         {% block content %}{% endblock content %}
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
