--- a/Proj_fromagerie/Authentification/templates/navbar.html
+++ b/Proj_fromagerie/Authentification/templates/navbar.html
@@ -12,6 +12,7 @@
           <a class="nav-link" href="{% url 'listeUtilisateurs' %}">liste des utilsateur</a>
           <a class="nav-link" href="{% url 'listeCommunes' %}">Gestion des comunes</a>
           <a class="nav-link" href="{% url 'liste_objets' %}">Gestion des objet</a>
+          <a class="nav-link" href="{% url 'conditionnement' %}">Gestion des embalages</a>
         </div>
       </div>
     </div>
