--- a/Proj_fromagerie/Authentification/templates/authentification/signup.html
+++ b/Proj_fromagerie/Authentification/templates/authentification/signup.html
@@ -1,25 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Inscription</h2>
-{% if form.errors %}
-{{form.errors}}
-{% endif %}
-<form action='' method='post' >
-
-    {{form.as_p}}
-    {% csrf_token %}
-    <button type = "submit">valider </button>
+{% load crispy_forms_tags %}
+<table borser="0" width = "1200" height = 400>
+    <tr>
+        <td style = "padding-left:515px;">
+        <h1>Formulaire inscription  utilisateur avec role associer</h1>
+<form method="POST">
+  {% csrf_token %}
+  <fieldset class="form-group">
+    {{ form|crispy }}
+  </fieldset>
+  <div class="form-group">
+    <button class="btn btn-outline-info" type="submit">Register</button>
+  </div>
 </form>
-
-</form>
-
+ 
+        </td>
+    </tr>
+ 
+    </table>
 
 {% endblock content %}
-<h2>Inscription</h2>
-{% if form.errors %}
-{{form.errors}}
-{% endif %}
+
 {% comment %} <form action='' method='post' >
 
     {{form.as_p}}
