--- a/Proj_fromagerie/Gestion_objets/templates/listObjet.html
+++ b/Proj_fromagerie/Gestion_objets/templates/listObjet.html
@@ -39,7 +39,7 @@
       <td>{{obj.poidsobj}}</td>
       <td>{{obj.o_imp}}</td>
       <td>checkbox</td>
-      <td>{{obj.idcondit}}</td>
+      <td>{{obj.idcondit.libcondit}}</td>
       <td>{{obj.points}}</td>
       <td>
         <div class="">
