--- a/Proj_fromagerie/Gestion_conditionnement/templates/listConditionnement.html
+++ b/Proj_fromagerie/Gestion_conditionnement/templates/listConditionnement.html
@@ -31,8 +31,8 @@
       <td>{{condi.prixcond}}</td>
       <td>
         <div class="">
-          <span><a href="{% url 'updateConditionement' condi.idcondit%}" class= "btn btn-primary mb-3" >modifier </span></a><br>
-          <span><a href="{% url 'delConditionement' condi.idcondit %}" class="btn btn-danger">suprimer </span></a><br>
+          <span><a href="{% url 'updateConditionement' condi.idcondit_id%}" class= "btn btn-primary mb-3" >modifier </span></a><br>
+          <span><a href="{% url 'delConditionement' condi.idcondit_id %}" class="btn btn-danger">suprimer </span></a><br>
         </div>
       </td>
     </tr>
