--- a/Proj_fromagerie/Gestion_utilisateurs/templates/Gestion_utilisateurs/listeUtilisateurs.html
+++ b/Proj_fromagerie/Gestion_utilisateurs/templates/Gestion_utilisateurs/listeUtilisateurs.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<table class="table table-bordered border-primary">
+<h1 class="text-center"> Liste des utilisateur</h1>
+<table class="table table-bordered">
     <thead>   
       <tr>
         <th scope="col">ID</th>
